stack/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    k8s-app: kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
  type: ClusterIP
  selector:
    k8s-app: kafka  
---
apiVersion: v1
kind: Pod
metadata:
  name: kafka-pod
  labels:
    k8s-app: kafka
spec:
  hostname: kafka 
  containers:
  - name: kafka
    image: confluentinc/cp-kafka:4.0.1-1   
    ports:
      - containerPort: 9092
