stack/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    k8s-app: zookeeper
spec:
  ports:
  - port: 2181
    targetPort: 2181
  type: ClusterIP
  selector:
    k8s-app: zookeeper 
---
apiVersion: v1
kind: Pod
metadata:
  name: zookeeper
  labels:
    k8s-app: zookeeper
spec:
  hostname: zookeeper 
  containers:
  - name: zookeeper
    image: confluentinc/cp-zookeeper:4.0.1-1   
    ports:
      - containerPort: 2181
